# myqro

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: cmake-single-platform.yml
cmake/: FindCppUnit.cmake
exe/encoder/: CMakeLists.txt
exe/encoder/src/: main.cpp
myqro/include/: bits.hpp  canvas.hpp  context.hpp  datastream.hpp  defines.hpp  encode_provider.hpp  encoder.hpp  error.hpp  logger.hpp  outputter.hpp  utils.hpp
myqro/src/: canvas.cpp  datastream.cpp  defines.cpp  encode_provider.cpp  encoder.cpp  logger.cpp  out.ppm  outputter.cpp
tests/unit/: CMakeLists.txt  main.cpp
tests/unit/src/: test_encoder.cpp  test_qr.cpp
